*******************************************************************************
                          CloverETL Engine - HISTORY of RELEASES
*******************************************************************************
REL-3-5-0-M1
------------

* Windows Share support
* Improved timezones support
* JSch library upgraded to 0.1.50
* Graph bottleneck detection

REL-3-4-1
---------

- FIXES:
	- Data_Intersection component drops data silently
	- NPE occurs when data flows from JSONReader to ExtHashJoin and both components are in the same phase
	- Checkconfig on DBOutputTable causes JNDI connection not released
	- SORT_WITHIN_GROUPS output more records then records on input
	- Lookup table can't read quoted data
	- XmlReader: when port is not selected NPE is thrown
	- A graph with DBLookupTable used in a CTL code is not restartable in batch mode

REL-3-4-0
---------

* documented that Cloudera 3 works only on Sun Java
* HTTPConnector should support PUT and DELETE methods
* HTTPConnector - content should allow byte/cbyte data types
* CTL2 wrapper for returning capturing groups from regex
* improved visualization of error messages
- FIXES:
	- XMLWriter with underscore in key fails on server
	- CharInputReader.skip skips bytes instead of characters
	- UniversalDataReader - wildcard redading fails on server
	- XMLExtract - extract element contents as text fails on databuffersize
	- XmlExtract: parent field is not copied correctly
	- Wildcard mapping does not check container type
	- Improve Aggregate checkconfig
	- MysqlDataWriter on MacOS
	- UniversalDataReader: "Trim strings: not working when "quote strings" enabled
	- XLSDataWriter: NPE when finishing writing into .xls file
- BACKWARDS INCOMPATIBILITY:
	- DBInputTable does not support empty strings - empty strings are considered as null value

REL 3-4-0-M2
------------

* Cleanup of error reporting in graph log
* Allow DataGenerator to generate variable number of records